use relative units for icon size

--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -18,8 +18,8 @@
 @media (min-width: 768px) {
   .CheckIcon {
     animation: SentIcon 0.9s;
-    width: 48px;
-    height: 48px;
+    width: 3vw;
+    height: 3vw;
   }
 
   .ContactContainer {
