--- a/src/theme.scss
+++ b/src/theme.scss
@@ -16,6 +16,7 @@ $font2: Raleway;
 
 @media (min-width: 768px) {
     .ActionButton, .ActionButton2 {
+        display: inline-block;
         padding: 1em 1.5em;
         font-size: 1.2vw;
         font-family: $font;
@@ -23,14 +24,15 @@ $font2: Raleway;
         font-weight: bold;
         border-width: 0;
         margin-top: 2vw;
-        color: black;
-        background: white;
+        color: black !important;
+        background: white !important;
+        text-decoration: none !important;
         cursor: pointer;
     }
 
     .ActionButton2 {
-        background: black;
-        color: white;
+        background: black !important;
+        color: white !important;
 
         &:disabled {
             background: grey;
@@ -122,6 +124,7 @@ $font2: Raleway;
 
 @media (max-width: 767px) {
     .ActionButton, .ActionButton2 {
+        display: inline-block;
         transition: 0.5s;
         padding: 1em 1.5em;
         font-size: 4vw;
@@ -130,14 +133,15 @@ $font2: Raleway;
         font-weight: bold;
         border-width: 0;
         margin-top: 4vw;
-        color: black;
-        background: white;
+        color: black !important;
+        background: white !important;
+        text-decoration: none !important;
         cursor: pointer;
     }
 
     .ActionButton2 {
-        background: black;
-        color: white;
+        background: black !important;
+        color: white !important;
 
         &:disabled {
             background: grey;
