launch new frontend

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -12,7 +12,7 @@
     .footer-link {
         margin-left: 1vw;
         margin-right: 1vw;
-        transition: opacity 0.3s ease-in-out;
+        transition: opacity 0.3s;
         opacity: 1;
         &:hover {
             opacity: 0.6;
