--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -27,8 +27,7 @@
     }
 
     .navbar-toggler {
-        outline: none !important;
-        border-color: #ffffff00 !important;
+        outline: none;
         background-color: #ffffff00 !important;
         left:86.5vw;
         top:5.35vw;
