--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -4,6 +4,7 @@
         text-align: center;
         position: relative;
         font-family: $font;
+        height: calc(100vh - 159px - 106px - 5vw)
     }
 
     .ProjectsH1 {
