--- a/src/pages/Speedcubing.scss
+++ b/src/pages/Speedcubing.scss
@@ -7,6 +7,7 @@
         width: 80vw;
         margin-left: 10vw;
         min-height: calc(100vh - 106px - 159px);
+        margin-bottom: 5vw;
     }
 
     .SpeedcubingText {
@@ -24,7 +25,7 @@
 
     .YTtitle {
         font-family: $font;
-        font-size: 1vw;
+        font-size: 1.2vw;
         color: black;
         text-align: left;
     }
@@ -84,48 +85,58 @@
 
 }
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media (max-width: 767px) {
     .CubingContainer {
-        padding-top: 12vw;
-        padding-left: 5vw;
-        padding-right: 5vw;
-        min-height: 100vh;
         font-family: $font;
-        background: #1a1a1a;
+        text-align: center;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        margin-bottom: 10vw;
     }
+
+    .SpeedcubingText {
+        text-align: left;
+    }
+
     .YTimage {
-        width: 26vw;
-        border-radius: 15px;
+        width: 80vw;
+        height: (9/16)*80vw;
         cursor: pointer;
         opacity: 1;
-        transition: opacity 0.3s ease;
+        transition: opacity 0.3s ease-in-out;
     }
 
     .YTtitle {
-        font-weight: bold;
-        color: white;
+        font-family: $font;
+        font-size: 4vw;
+        color: black;
+        text-align: left;
     }
 
     .imageContainer {
         position: relative;
         text-align: center;
         display: block;
+        border: none;
+        outline: none !important;
+        background: transparent;
+        padding: 0;
     }
 
-    .imageContainer:hover {
+    .imageContainer:hover, .imageContainer:focus {
         cursor: pointer;
         .YTimage {
-            opacity: 0.5;
+            opacity: 0.8;
         }
         .playArrow {
-            opacity: 1;
+            opacity: 0.9;
         }
     }
 
     .YTgrid {
         display: grid;
-        grid-template-columns: repeat(3,28vw);
-        gap: 1rem;
+        grid-template-columns: repeat(1,90vw);
+        gap: 5vw;
     }
 
     .playArrow {
@@ -134,7 +145,7 @@
         width: 100%;
         height: 100%;
         opacity: 0;
-        transition: opacity 0.3s ease;
+        transition: opacity 0.3s ease-in-out;
     }
 
     .custom-modal {
@@ -149,123 +160,8 @@
         height: calc(50vw * 9/16);
     }
 
-    .SpeedcubingH1 {
-        font-size: 3vw;
-        font-weight: bold;
-        color: white;
-    }
-
-    .SpeedcubingText {
-        color: white;
-    }
-
-    .SpeedcubingCard {
-        color: white;
-        background: #303030;
-        border-radius: 25px;
-        box-shadow: 5px 5px black;
-        padding: 2vw;
-        font-family: $font;
-    }
-
-    .Video {
-        padding: 1vw;
-    }
-
-    .TallCard {
-        grid-row: span 2 / auto;
-    }
-
-    .LongCard {
-        grid-column: span 2 / auto;
-    }
-
-}
-
-@media (max-width: 767px) {
-    .CubingContainer {
-        padding-top: 5vw;
-        padding-left: 5vw;
-        padding-right: 5vw;
-        min-height: 100vh;
-        font-family: $font;
-        background: #1a1a1a;
-    }
-    .YTimage {
-        width: 80vw;
-        border-radius: 15px;
-        cursor: pointer;
-        opacity: 1;
-        transition: opacity 0.3s ease;
-    }
-
-    .YTtitle {
-        font-weight: bold;
-        color: white;
-    }
-
-    .imageContainer {
-        position: relative;
-        text-align: center;
-        display: block;
-    }
-
-    .imageContainer:hover {
-        cursor: pointer;
-        .YTimage {
-            opacity: 0.5;
-        }
-        .playArrow {
-            opacity: 1;
-        }
-    }
-
-    .YTgrid {
-        display: block;
-    }
-
-    .playArrow {
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
-
-    .custom-modal {
-        display: flex;
-        text-align: center;
-        justify-content: center;
-        top: 10vw !important;
-    }
-
-    .videoPlayer {
-        width: 50vw;
-        height: calc(50vw * 9/16);
-    }
-
-    .SpeedcubingH1 {
-        font-size: 7.5vw;
-        font-weight: bold;
-        color: white;
-    }
-
-    .SpeedcubingText {
-        color: white;
-    }
-
-    .SpeedcubingCard {
-        color: white;
-        background: #303030;
-        border-radius: 25px;
-        box-shadow: 5px 5px black;
-        padding: 8vw;
-        font-family: $font;
-        margin-top: 5vw;
-    }
-
-    .Video {
+    .SpeedcubingItem {
         padding: 5vw;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 }
