--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,17 +1,15 @@
 @import '../theme.scss';
 
-.Home {
-    animation: FadeIn 1s;
+.NameHeader {
+    text-align: left !important;
 }
 
 @media (min-width: 768px) {
 
-    $width: 90vw;
-    $imageratio: 1/2.39;
+    $width: 100vw;
+    $imageratio: 9/16;
 
     .HomePage {
-        width: 90vw;
-        margin-left: 5vw;
         text-align: center;
         margin-bottom: 5vw;
     }
@@ -28,8 +26,9 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        width: $width;
         height: $imageratio*$width;
+        z-index: 999;
+        width: 100%;
         background-color: #00000070;
     }
 
@@ -51,7 +50,8 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: center;   
+        margin-top: 5vw;     
     }
 
     .SkillTitle {
@@ -93,7 +93,7 @@
 
     .HeroImage {
         width: $width;
-        height: $imageratio*$width;
+        height: calc(100vh - 106px);
         object-fit: cover;
     }
 
