--- a/src/theme.scss
+++ b/src/theme.scss
@@ -71,7 +71,7 @@ $font2: Raleway;
     .Header1 {
         font-family: $font2;
         text-transform: uppercase;
-        font-weight: lighter;
+        font-weight: bold;
         font-size: 4vw;
         color: black;
         text-align: center;
