--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -8,6 +8,23 @@
 
     $width: 100vw;
     $imageratio: 9/16;
+    $imageratio2: 1/2.39;
+
+    .AccentBar {
+        background: $accent;
+        height: 5px; 
+        width: 50vw;
+        margin-bottom: 8px;
+    }
+
+    .AboutMe {
+        position: relative;
+        width: 67.5vw;
+        left: 16.25vw;
+        text-align: left;
+        margin-top: 2.5vw;
+        padding-top: 5vw;
+    }
 
     .HomePage {
         text-align: center;
@@ -18,6 +35,7 @@
         width: $width;
         height: $imageratio*$width;
         object-fit: cover;
+        object-position: 100% 0;
     }
 
     .ContentContainer {
@@ -39,18 +57,28 @@
         width: 21.5vw;
         margin-left: 0.5vw;
         margin-right: 0.5vw;
+        margin-bottom: 1vw;
+    }
+
+    .SkillColumn {
+        display: flex;
+        flex-direction: column;
     }
 
     .SkillImage {
-        height: $imageratio*19vw;
+        height: $imageratio2*19vw;
         background-size: cover;
     }
 
     .SkillsArea {
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
         justify-content: center;   
+        flex-wrap: wrap;
+        width: 67.5vw;
+        left: 16.25vw;
         margin-top: 5vw;     
     }
 
@@ -78,7 +106,23 @@
 
 @media (max-width: 767px) {
     $width: 100vw;
-    $imageratio: 1;
+
+    .AboutMe {
+        position: relative;
+        width: 90vw;
+        left: 5vw;
+        margin-top: 7.5vw;
+        margin-bottom: 10vw;
+        padding-top: 7.5vw;
+        text-align: left;
+    }
+
+    .AccentBar {
+        background: $accent;
+        height: 5px; 
+        width: 80vw;
+        margin-bottom: 8px;
+    }
 
     .HomeContainer {
         margin-left: 5vw;
@@ -93,7 +137,7 @@
 
     .HeroImage {
         width: $width;
-        height: calc(100vh - 106px);
+        height: 100vh;
         object-fit: cover;
     }
 
@@ -104,7 +148,7 @@
         justify-content: center;
         flex-direction: column;
         width: $width;
-        height: $imageratio*$width;
+        height: 100vh;
         background-color: #00000070;
         padding-left: 5vw;
         padding-right: 5vw;
