--- a/src/pages/Speedcubing.scss
+++ b/src/pages/Speedcubing.scss
@@ -6,7 +6,7 @@
         text-align: center;
         width: 80vw;
         margin-left: 10vw;
-        min-height: calc(100vh - 106px - 159px);
+        min-height: calc(100vh - 96px - 159px - 10vw);
         margin-bottom: 5vw;
     }
 
