--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -2,13 +2,17 @@
 
 @keyframes SentIcon {
   0% {
-      width: 0px;
-      height: 0px;
+      width: 0;
+      height: 0;
       transform: rotate(-270deg);
   }
   100% {
       transform: rotate(0deg);
   }
+}
+
+.ContactForm {
+  text-align: left;
 }
 
 @media (min-width: 768px) {
@@ -26,10 +30,6 @@
     margin-top: 4vw;
     min-height: calc(100vh - 96px - 159px - 9vw);
     margin-bottom: 5vw;
-  }
-
-  .ContactForm {
-    text-align: left;
   }
 
   .NameInputContainer {
@@ -87,7 +87,6 @@
   }
 
   .ContactForm {
-    text-align: left;
     width: 90vw;
     margin-left: 5vw;
     margin-right: 5vw;
