--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -1,20 +1,19 @@
 @import '../theme.scss';
 
-@media (min-width: 768px) {
+.ProjectsContainer {
+    text-align: center;
+    position: relative;
+    font-family: $font;
+}
 
+@media (min-width: 768px) {
     .ProjectsContainer {
-        text-align: center;
-        position: relative;
-        font-family: $font;
         height: calc(100vh - 159px - 96px - 10vw)
     }
 }
 
 @media (max-width: 767px) {
     .ProjectsContainer {
-        text-align: center;
-        position: relative;
-        font-family: $font;
         height: calc(100vh - 159px - 96px - 14vw)
     }
 }
