--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -50,5 +50,7 @@
         font-family: $font;
         text-transform: uppercase;
         font-size: 16px;
+        padding-top: 4px;
+        padding-bottom: 4px;
     }
 }
