--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,160 +3,169 @@ $font2: Raleway;
 $accent: #ff3333;
 
 .White {
-    color: white !important;
+  color: white !important;
 }
 
 @media (min-width: 768px) {
-    .ActionButton, .ActionButton2 {
-        display: inline-block;
-        padding: 1em 1.5em;
-        font-size: 1.2vw;
-        font-family: $font;
-        text-transform: uppercase;
-        font-weight: bold;
-        border-width: 0;
-        margin-top: 2vw;
-        color: black !important;
-        background: white !important;
-        text-decoration: none !important;
-        cursor: pointer;
-    }
+  .ActionButton,
+  .ActionButton2 {
+    display: inline-block;
+    padding: 1em 1.5em;
+    font-size: 1.2vw;
+    font-family: $font;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-width: 0;
+    margin-top: 2vw;
+    color: black !important;
+    background: white !important;
+    text-decoration: none !important;
+    cursor: pointer;
+  }
 
-    .ActionButton2 {
-        background: black !important;
-        color: white !important;
+  .ActionButton2 {
+    background: black !important;
+    color: white !important;
 
-        &:disabled {
-            background: grey;
-            cursor: default;
-        }
+    &:disabled {
+      background: grey;
+      cursor: default;
     }
-    
-    .ActionButton:hover, .ActionButton2:hover {
-        .Underline:before, .Underline2:before {
-            visibility: visible;
-            transform: scaleX(1);
-        }
-    }
-    
-    .Underline, .Underline2 {
-        position: relative;
-    }
-    
-    .Underline:before, .Underline2:before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        bottom: -2px;
-        left: 0;
-        background: black;
-        visibility: hidden;
-        transform: scaleX(0);
-        transition: all 0.3s ease-in-out;
-    }
+  }
 
+  .ActionButton:hover,
+  .ActionButton2:hover {
+    .Underline:before,
     .Underline2:before {
-        background: white;
+      visibility: visible;
+      transform: scaleX(1);
     }
+  }
 
-    .Header1 {
-        font-family: $font2;
-        text-transform: uppercase;
-        font-weight: bold;
-        font-size: 4vw;
-        color: black;
-        text-align: center;
-    }
+  .Underline,
+  .Underline2 {
+    position: relative;
+  }
 
-    .Header2 {
-        font-size: 2vw;
-        font-weight: lighter;
-        font-family: $font2;
-        text-transform: uppercase;
-        margin-top: 4vw;
-        margin-bottom: 1vw;
-    }
+  .Underline:before,
+  .Underline2:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
+    background: black;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+  }
 
-    .Big {
-        font-size: 3vw;
-    }
+  .Underline2:before {
+    background: white;
+  }
 
-    .Small {
-        font-size: 1.3vw;
-    }
+  .Header1 {
+    font-family: $font2;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 4vw;
+    color: black;
+    text-align: center;
+  }
 
-    .Text1 {
-        font-family: $font;
-        font-size: 1.5vw;
-        color: black;
-    }
+  .Header2 {
+    font-size: 2vw;
+    font-weight: lighter;
+    font-family: $font2;
+    text-transform: uppercase;
+    margin-top: 4vw;
+    margin-bottom: 1vw;
+  }
 
-    .Text1 > br, .Header2 > br {
-        display: none;
-    }
+  .Big {
+    font-size: 3vw;
+  }
+
+  .Small {
+    font-size: 1.3vw;
+  }
+
+  .Text1 {
+    font-family: $font;
+    font-size: 1.5vw;
+    color: black;
+  }
+
+  .Text1 > br,
+  .Header2 > br {
+    display: none;
+  }
 }
 
 @media (max-width: 767px) {
-    .ActionButton, .ActionButton2 {
-        display: inline-block;
-        transition: 0.5s;
-        padding: 1em 1.5em;
-        font-size: 4vw;
-        font-family: $font;
-        text-transform: uppercase;
-        font-weight: bold;
-        border-width: 0;
-        margin-top: 4vw;
-        color: black !important;
-        background: white !important;
-        text-decoration: none !important;
-        cursor: pointer;
-    }
+  .ActionButton,
+  .ActionButton2 {
+    display: inline-block;
+    transition: 0.5s;
+    padding: 1em 1.5em;
+    font-size: 4vw;
+    font-family: $font;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-width: 0;
+    margin-top: 4vw;
+    color: black !important;
+    background: white !important;
+    text-decoration: none !important;
+    cursor: pointer;
+  }
 
-    .ActionButton2 {
-        background: black !important;
-        color: white !important;
+  .ActionButton2 {
+    background: black !important;
+    color: white !important;
 
-        &:disabled {
-            background: grey;
-            cursor: default;
-        }
+    &:disabled {
+      background: grey;
+      cursor: default;
     }
-        
-    .Underline, .Underline2 {
-        position: relative;
-    }
-    
-    .Underline:before, .Underline2:before {
-        display: none;
-    }
+  }
 
-    .Header1 {
-        font-family: $font2;
-        text-transform: uppercase;
-        font-weight: lighter;
-        font-size: 10.5vw;
-        color: black;
-        text-align: center;
-    }
+  .Underline,
+  .Underline2 {
+    position: relative;
+  }
 
-    .Header2 {
-        margin-top: 10vw;
-        font-size: 8vw;
-        font-weight: lighter;
-        font-family: $font2;
-        text-transform: uppercase;
-        margin-bottom: 4vw;
-    }
+  .Underline:before,
+  .Underline2:before {
+    display: none;
+  }
 
-    .Small {
-        font-size: 6vw;
-    }
+  .Header1 {
+    font-family: $font2;
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 10.5vw;
+    color: black;
+    text-align: center;
+  }
 
-    .Text1 {
-        font-family: $font;
-        font-size: 4.5vw;
-        color: black;
-    }
+  .Header2 {
+    margin-top: 10vw;
+    font-size: 8vw;
+    font-weight: lighter;
+    font-family: $font2;
+    text-transform: uppercase;
+    margin-bottom: 4vw;
+  }
+
+  .Small {
+    font-size: 6vw;
+  }
+
+  .Text1 {
+    font-family: $font;
+    font-size: 4.5vw;
+    color: black;
+  }
 }
