use css grid on home page, other css improvements

--- a/src/pages/Speedcubing.scss
+++ b/src/pages/Speedcubing.scss
@@ -87,7 +87,7 @@
 
   .SpeedcubingItem {
     padding: 1vw;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: $shadow;
   }
 }
 
@@ -123,8 +123,7 @@
     padding: 0;
   }
 
-  .imageContainer:hover,
-  .imageContainer:focus {
+  .imageContainer:hover:focus {
     cursor: pointer;
     .YTimage {
       opacity: 0.8;
@@ -163,6 +162,6 @@
 
   .SpeedcubingItem {
     padding: 5vw;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: $shadow;
   }
 }
