--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -9,6 +9,11 @@
   text-decoration: underline;
 }
 
+.Skill {
+  text-align: left;
+  box-shadow: $shadow;
+}
+
 @media (min-width: 768px) {
   $width: 100vw;
   $imageratio: 9/16;
@@ -57,15 +62,8 @@
 
   .Skill {
     padding: 1vw;
-    text-align: left;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 21.5vw;
-    margin-left: 0.5vw;
-    margin-right: 0.5vw;
-    margin-bottom: 1vw;
-  }
-
-  .SkillColumn {
+    margin: 0 0.5vw 1vw;
     display: flex;
     flex-direction: column;
   }
@@ -77,11 +75,8 @@
 
   .SkillsArea {
     position: relative;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 22.5vw 22.5vw 22.5vw;
     width: 67.5vw;
     left: 16.25vw;
     margin-top: 5vw;
@@ -103,9 +98,8 @@
   .SkillText {
     font-family: $font;
     font-size: 1.1vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    padding-bottom: 1vw;
+    padding: 0 1vw 1vw;
+    flex-grow: 1;
   }
 }
 
@@ -162,11 +156,9 @@
   $skill-padding: 5vw;
 
   .Skill {
-    padding: $skill-padding;
-    text-align: left;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 90vw;
     margin-bottom: $skill-padding;
+    padding: $skill-padding;
   }
 
   .SkillImage {
