--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -110,8 +110,7 @@
     position: relative;
     width: 90vw;
     left: 5vw;
-    margin-top: 7.5vw;
-    margin-bottom: 10vw;
+    margin: 7.5vw 0 10vw;
     padding-top: 7.5vw;
     text-align: left;
   }
@@ -124,8 +123,7 @@
   }
 
   .HomeContainer {
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin: 0 5vw;
   }
 
   .HomePage {
