--- a/src/theme.scss
+++ b/src/theme.scss
@@ -82,8 +82,7 @@ $shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     font-weight: lighter;
     font-family: $font2;
     text-transform: uppercase;
-    margin-top: 4vw;
-    margin-bottom: 1vw;
+    margin: 4vw 0 1vw;
   }
 
   .Big {
@@ -154,12 +153,11 @@ $shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .Header2 {
-    margin-top: 10vw;
+    margin: 10vw 0 4vw;
     font-size: 8vw;
     font-weight: lighter;
     font-family: $font2;
     text-transform: uppercase;
-    margin-bottom: 4vw;
   }
 
   .Small {
