--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,7 +1,7 @@
 @import '../theme.scss';
 
 .FooterContainer {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   padding: 40px;
   bottom: 0;
