refactor nav menu, css improvements
add active class to menu (underline on desktop, bold on mobile)
use flexbox to center content, force footer to bottom of page
remove unused css classes
fix 404 page

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,7 +1,20 @@
 @import '../theme.scss';
 
+.MuiSvgIcon-root {
+  margin-right: 5px;
+  margin-bottom: 2px;
+}
+
 .navlink-custom {
   text-decoration: none !important;
+}
+
+.active-link {
+  .Underline:before,
+  .Underline2:before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
 }
 
 .navlink-custom:hover {
@@ -53,5 +66,9 @@
     font-size: 16px;
     padding-top: 4px;
     padding-bottom: 4px;
+  }
+
+  .active-link {
+    font-weight: bolder;
   }
 }
