--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,7 +7,24 @@ $shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   color: white !important;
 }
 
+.page-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-body {
+  flex-grow: 1;
+}
+
 @media (min-width: 768px) {
+  .center-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100vw;
+  }
+
   .ActionButton,
   .ActionButton2 {
     display: inline-block;
