--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -29,7 +29,6 @@
   .AboutMe {
     position: relative;
     width: 67.5vw;
-    left: 16.25vw;
     text-align: left;
     margin-top: 2.5vw;
     padding-top: 5vw;
@@ -38,7 +37,6 @@
   .HomePage {
     text-align: center;
     margin-bottom: 5vw;
-    min-height: calc(100vh - 96px - 159px);
   }
 
   .HeroImage {
@@ -78,7 +76,6 @@
     display: grid;
     grid-template-columns: 22.5vw 22.5vw 22.5vw;
     width: 67.5vw;
-    left: 16.25vw;
     margin-top: 5vw;
   }
 
@@ -108,9 +105,7 @@
 
   .AboutMe {
     position: relative;
-    width: 90vw;
-    left: 5vw;
-    margin: 7.5vw 0 10vw;
+    margin: 7.5vw 5vw 10vw;
     padding-top: 7.5vw;
     text-align: left;
   }
@@ -120,10 +115,6 @@
     height: 5px;
     width: 80vw;
     margin-bottom: 8px;
-  }
-
-  .HomeContainer {
-    margin: 0 5vw;
   }
 
   .HomePage {
