--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -89,6 +89,7 @@
 
   .SkillIcon {
     width: 2.5vw;
+    height: 2.5vw;
     margin-right: 0.5vw;
   }
 
@@ -179,6 +180,7 @@
 
   .SkillIcon {
     width: 10vw;
+    height: 10vw;
     margin-right: 2vw;
   }
 }
