--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,4 +1,3 @@
-@import '../theme.scss';
 @import './hamburgers.scss';
 
 .menu-icon {
@@ -13,8 +12,8 @@
 }
 
 .active-link {
-  .Underline:before,
-  .Underline2:before {
+  .underline-dark:before,
+  .underline-light:before {
     visibility: visible;
     transform: scaleX(1);
   }
@@ -23,8 +22,8 @@
 .navlink-custom:hover {
   color: inherit;
 
-  .Underline:before,
-  .Underline2:before {
+  .underline-dark:before,
+  .underline-light:before {
     visibility: visible;
     transform: scaleX(1);
   }
@@ -35,14 +34,13 @@
 }
 
 @media (min-width: 768px) {
-  .MenuContainer {
+  .menu-container {
     margin-left: 7.5vw;
     width: 80vw;
   }
 
   .navlink-custom {
     color: black;
-    font-family: $font;
     text-transform: uppercase;
     font-size: 14px;
     margin-right: 1rem;
@@ -50,8 +48,10 @@
 }
 
 @media (max-width: 767px) {
-  .MenuContainer {
+  .menu-container {
     width: 100vw;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .navbar-toggler {
@@ -64,7 +64,6 @@
 
   .navlink-custom {
     color: black;
-    font-family: $font;
     text-transform: uppercase;
     font-size: 16px;
     padding-top: 4px;
@@ -72,6 +71,7 @@
   }
 
   .active-link {
-    font-weight: bolder;
+    text-decoration: underline !important;
+    text-underline-offset: 2px;
   }
 }
