--- a/src/pages/Speedcubing.scss
+++ b/src/pages/Speedcubing.scss
@@ -1,14 +1,3 @@
-@import '../theme.scss';
-
-.CubingContainer {
-  font-family: $font;
-  text-align: center;
-}
-
-.SpeedcubingText {
-  text-align: left;
-}
-
 .modal-body-custom {
   display: flex;
   flex-direction: row;
@@ -19,139 +8,50 @@
   max-width: 70vw !important;
 }
 
-.videoPlayer {
+.video-player {
   width: 65vw;
   height: 9/16 * 65vw;
 }
 
-@media (min-width: 768px) {
-  .CubingContainer {
-    width: 80vw;
-    margin-bottom: 5vw;
-  }
+.image-container {
+  position: relative;
+  text-align: center;
+  display: block;
+  border: none;
+  outline: none !important;
+  background: transparent;
+  padding: 0;
 
-  .SpeedcubingText {
-    margin-bottom: 4vw;
-  }
-
-  .YTimage {
-    width: 24vw;
-    height: (9/16) * 24vw;
+  &:focus,
+  &:hover {
     cursor: pointer;
-    opacity: 1;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .YTtitle {
-    font-family: $font;
-    font-size: 1.2vw;
-    color: black;
-    text-align: left;
-  }
-
-  .imageContainer {
-    position: relative;
-    text-align: center;
-    display: block;
-    border: none;
-    outline: none !important;
-    background: transparent;
-    padding: 0;
-  }
-
-  .imageContainer:hover,
-  .imageContainer:focus {
-    cursor: pointer;
-    .YTimage {
+    .yt-image {
       opacity: 0.8;
     }
-    .playArrow {
+    .play-arrow {
       opacity: 0.9;
     }
-  }
-
-  .YTgrid {
-    display: grid;
-    margin-bottom: 4vw;
-    grid-template-columns: repeat(3, 26vw);
-    gap: 1vw;
-  }
-
-  .playArrow {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .SpeedcubingItem {
-    padding: 1vw;
-    box-shadow: $shadow;
   }
 }
 
+.yt-image {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.play-arrow {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.modal-content {
+  border-radius: 0;
+}
+
 @media (max-width: 767px) {
-  .CubingContainer {
-    margin: 0 5vw 10vw;
-  }
-
-  .YTimage {
-    width: 80vw;
-    height: (9/16) * 80vw;
-    cursor: pointer;
-    opacity: 1;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .YTtitle {
-    font-family: $font;
-    font-size: 4vw;
-    color: black;
-    text-align: left;
-  }
-
-  .imageContainer {
-    position: relative;
-    text-align: center;
-    display: block;
-    border: none;
-    outline: none !important;
-    background: transparent;
-    padding: 0;
-  }
-
-  .imageContainer:hover:focus {
-    cursor: pointer;
-    .YTimage {
-      opacity: 0.8;
-    }
-    .playArrow {
-      opacity: 0.9;
-    }
-  }
-
-  .YTgrid {
-    display: grid;
-    grid-template-columns: repeat(1, 90vw);
-    gap: 5vw;
-  }
-
-  .playArrow {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .SpeedcubingItem {
-    padding: 5vw;
-    box-shadow: $shadow;
-  }
-
   .modal-custom {
     display: none !important;
   }
