--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,189 +1,51 @@
-$font: Work Sans;
-$font2: Raleway;
-$accent: #ff3333;
-$shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-.White {
-  color: white !important;
+body {
+  font-family: 'Work Sans', sans-serif;
 }
 
-.page-wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.page-body {
-  flex-grow: 1;
+a {
+  color: black !important;
 }
 
 @media (min-width: 768px) {
-  .center-wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100vw;
-  }
-
-  .ActionButton,
-  .ActionButton2 {
-    display: inline-block;
-    padding: 1em 1.5em;
-    font-size: 1.2vw;
-    font-family: $font;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-width: 0;
-    margin-top: 2vw;
-    color: black !important;
-    background: white !important;
-    text-decoration: none !important;
-    cursor: pointer;
-  }
-
-  .ActionButton2 {
-    background: black !important;
-    color: white !important;
-
-    &:disabled {
-      background: grey;
-      cursor: default;
-    }
-  }
-
-  .ActionButton:hover,
-  .ActionButton2:hover,
-  .ActionButton:focus,
-  .ActionButton2:focus {
-    .Underline:before,
-    .Underline2:before {
-      visibility: visible;
-      transform: scaleX(1);
-    }
-  }
-
-  .Underline,
-  .Underline2 {
+  .underline-dark,
+  .underline-light {
     position: relative;
   }
 
-  .Underline:before,
-  .Underline2:before {
+  .underline-dark:before {
     content: '';
     position: absolute;
     width: 100%;
     height: 2px;
     bottom: -2px;
     left: 0;
-    background: black;
     visibility: hidden;
     transform: scaleX(0);
     transition: all 0.3s ease-in-out;
+    background: black;
   }
 
-  .Underline2:before {
+  .underline-light:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
     background: white;
-  }
-
-  .Header1 {
-    font-family: $font2;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 4vw;
-    color: black;
-    text-align: center;
-  }
-
-  .Header2 {
-    font-size: 2vw;
-    font-weight: lighter;
-    font-family: $font2;
-    text-transform: uppercase;
-    margin: 4vw 0 1vw;
-  }
-
-  .Big {
-    font-size: 3vw;
-  }
-
-  .Small {
-    font-size: 1.3vw;
-  }
-
-  .Text1 {
-    font-family: $font;
-    font-size: 1.5vw;
-    color: black;
-  }
-
-  .Text1 > br,
-  .Header2 > br {
-    display: none;
   }
 }
 
 @media (max-width: 767px) {
-  .ActionButton,
-  .ActionButton2 {
-    display: inline-block;
-    transition: 0.5s;
-    padding: 1em 1.5em;
-    font-size: 4vw;
-    font-family: $font;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-width: 0;
-    margin-top: 4vw;
-    color: black !important;
-    background: white !important;
-    text-decoration: none !important;
-    cursor: pointer;
-  }
-
-  .ActionButton2 {
-    background: black !important;
-    color: white !important;
-
-    &:disabled {
-      background: grey;
-      cursor: default;
-    }
-  }
-
-  .Underline,
-  .Underline2 {
+  .underline-dark,
+  .underline-light {
     position: relative;
   }
-
-  .Underline:before,
-  .Underline2:before {
+  .underline-dark:before,
+  .underline-light:before {
     display: none;
-  }
-
-  .Header1 {
-    font-family: $font2;
-    text-transform: uppercase;
-    font-weight: lighter;
-    font-size: 10.5vw;
-    color: black;
-    text-align: center;
-  }
-
-  .Header2 {
-    margin: 10vw 0 4vw;
-    font-size: 8vw;
-    font-weight: lighter;
-    font-family: $font2;
-    text-transform: uppercase;
-  }
-
-  .Small {
-    font-size: 6vw;
-  }
-
-  .Text1 {
-    font-family: $font;
-    font-size: 4.5vw;
-    color: black;
   }
 }
