--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -8,20 +8,23 @@
   color: black !important;
 }
 
+.action-btn {
+  display: inline-block;
+  padding: 1em 1.5em;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-width: 0;
+  margin-top: 2vw;
+  text-decoration: none !important;
+  cursor: pointer;
+  &:disabled {
+    cursor: default;
+  }
+}
+
 @media (min-width: 768px) {
   .action-btn {
-    display: inline-block;
-    padding: 1em 1.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-width: 0;
     margin-top: 2vw;
-    text-decoration: none !important;
-    cursor: pointer;
-    &:disabled {
-      background: grey;
-      cursor: default;
-    }
   }
 
   .action-btn:hover,
@@ -43,17 +46,6 @@
 
 @media (max-width: 767px) {
   .action-btn {
-    display: inline-block;
-    padding: 1em 1.5em;
-    text-transform: uppercase;
-    font-weight: bold;
-    border-width: 0;
     margin-top: 4vw;
-    text-decoration: none !important;
-    cursor: pointer;
-    &:disabled {
-      background: grey;
-      cursor: default;
-    }
   }
 }
