line break in let's connect copy

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -32,6 +32,10 @@ $accent: #ff3333;
   .name-title {
     font-size: 3.2rem;
   }
+
+  .lets-connect > br {
+    display: none;
+  }
 }
 
 @media (max-width: 767px) {
